changed the way settings are loaded and changed with checkboxes.

--- a/style/mainWindow/components/_navigation-bar.scss
+++ b/style/mainWindow/components/_navigation-bar.scss
@@ -63,13 +63,13 @@
         }
     }
     
-    & .__completed-tasks {
+    & .__seeCompletedTasks {
         margin-top: 15%;
         display: flex;
         margin-left: 15%;
     }
 
-    & .__important-tasks {
+    & .__seeImportantOnly {
         margin-top: 5%; 
         display: flex;
         margin-left: 15%;
