--- a/style/mainWindow/components/_task-card.scss
+++ b/style/mainWindow/components/_task-card.scss
@@ -40,7 +40,8 @@
             bottom: 0.5rem;
             width: 1.5rem;
             height: 1.5rem;
-            font-size: 1.7em;
+            font-size: 1.6em;
+            line-height: 1.6em;
             color: white;
             border: 2px solid white;
             background: linear-gradient(30deg, $dark-blue-3, $dark-blue-4);
