--- a/style/mainWindow/components/_calendar.scss
+++ b/style/mainWindow/components/_calendar.scss
@@ -47,6 +47,7 @@
                 align-items: center;
                 justify-content: center;
                 font-size: 2.5em;
+                transition: background-color 0.3s;
                 cursor: pointer;
 
                 & .__curr-day-mark {
@@ -68,6 +69,10 @@
                     &::after {
                         content: "TODAY";
                     }
+                }
+
+                &:hover {
+                    background-color: #ECECEC;
                 }
             
             }
@@ -98,6 +103,11 @@
             height: 100%;
             color: $medium-blue-1;
             font-size: 2.5em;
+            transition: font-size 0.3s;
+
+            &:hover .__icon {
+                animation: jiggle 0.5s;
+            }
         }
 
         & .__prevbutton {
@@ -105,5 +115,23 @@
         }
 
         
+    }
+}
+
+@keyframes jiggle {
+    0% {
+        transform: rotateZ(-10deg);
+    }
+    25% {
+        transform: rotateZ(10deg);
+    }
+    50% {
+        transform: rotateZ(0deg);
+    }
+    75% {
+        transform: rotateZ(-10deg);
+    }
+    100% {
+        transform: rotateZ(0deg);
     }
 }
