--- a/style/mainWindow/components/_navigation-bar.scss
+++ b/style/mainWindow/components/_navigation-bar.scss
@@ -154,30 +154,31 @@
         z-index: 50;
         background: linear-gradient(10deg, $light-blue-1, $lighter-blue-2);
         left: -150%;
-        width: calc(100% - 1rem);
-        height: calc(100% - 1rem);
-        padding: 0.5rem;
+        width: 100%;
+        height: 100%;
         display: flex;
         flex-direction: column;
-        transition: left 1s;
+        transition: left 0.5s;
 
         & .__title {
             color: white;
-            margin-top: 0;
+            margin: 0.5rem;
             font-size: 1.35em;
             text-decoration: underline;
         }
 
         & .__disclaimer {
             font-size: 1.15em;
-            color: #303030;
             padding: 0.5rem;
+            border-left: none;
+            border-right: none;
+            color: $dark-grey-1;
             font-weight: 700;
             margin-bottom: 1.5rem;
         }
 
         & .__input {
-            padding: 0.5rem;
+            margin: 0.5rem;
             display: flex;
             margin-bottom: 1rem;
 
@@ -185,7 +186,7 @@
 
         & .__bug-report {
             position: relative;
-            margin-top: 0.5rem;
+            margin: 0.5rem;
 
             & span {
                 font-size: 1.25em;
@@ -193,7 +194,7 @@
 
             & img {
                 position: absolute;
-                left: 1.5rem;
+                left: 2rem;
                 width: 1rem;
                 height: 1rem;
             }
