--- a/style/mainWindow/components/_navigation-bar.scss
+++ b/style/mainWindow/components/_navigation-bar.scss
@@ -78,8 +78,8 @@
     & .__label {
         font-family: 'Trebuchet MS', serif;
         color: $dark-grey-1;
-        margin-left: 0.5rem;
-        font-size: 0.8rem;
+        margin-left: 0.35rem;
+        font-size: 1.25em;
         flex-basis: 80%;
     }
 
