--- a/style/mainWindow/main.css
+++ b/style/mainWindow/main.css
@@ -367,8 +367,8 @@
 .navigation-bar .__label {
   font-family: 'Trebuchet MS', serif;
   color: #707070;
-  margin-left: 0.5rem;
-  font-size: 0.8rem;
+  margin-left: 0.35rem;
+  font-size: 1.25em;
   -ms-flex-preferred-size: 80%;
       flex-basis: 80%;
 }
@@ -1107,5 +1107,38 @@ body {
 
 .template {
   display: none;
+}
+
+@media (max-width: 1000px) {
+  body {
+    font-size: 60%;
+  }
+  .navigation-bar .nav-btn {
+    width: 3.25rem;
+    height: 3.25rem;
+  }
+  .task-page {
+    width: 72%;
+  }
+}
+
+@media (max-width: 800px) {
+  body {
+    font-size: 55%;
+    grid-template: "head head" 1fr "nav  main" 6fr / 1.5fr 4fr;
+  }
+  .header .__mainTitle {
+    font-size: 3em;
+  }
+  .header .__next-task {
+    display: none;
+  }
+  .navigation-bar .nav-btn {
+    width: 2.5rem;
+    height: 2.5rem;
+  }
+  .task-page {
+    width: 68%;
+  }
 }
 /*# sourceMappingURL=main.css.map */
