--- a/style/mainWindow/_layout.scss
+++ b/style/mainWindow/_layout.scss
@@ -3,7 +3,8 @@ body {
   font-size: 65%;
   display: grid;
   padding: 0px;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
   margin: 0px;
   font-family: "Calibri", serif;
   height: 100vh;
@@ -76,6 +77,17 @@ body {
       width: 2.5rem;
       height: 2.5rem;
     }
+
+    & .__settings {
+
+      & .__bug-report {
+        margin-left: 0.7rem;
+
+        & img {
+          left: -0.35rem;
+        }
+      }
+    }
   }
 
   .task-page {
@@ -83,5 +95,15 @@ body {
   }
 
   
+}
+
+@media (max-height: 550px) {
+  .navigation-bar {
+
+    & .__nav-button-box {
+      margin-top: 15%;
+      margin-bottom: 15%;
+    }
+  }
 }
 
