fixed a few bugs and added the tutorial task.

--- a/style/newTaskWindow/components/_header.scss
+++ b/style/newTaskWindow/components/_header.scss
@@ -6,7 +6,7 @@
       border-left: 1px solid $lighter-blue-1;
       color: white;
       padding-left: 0.8em;
-  
+      -webkit-app-region: drag;
     }
 
     & .__close-btn {
